* Reordered internal array for action menus, added a placeholder for link hover titles, and turned the 'click' member into 'custom', as it could be used for anything really. (Display.php, topic.js) ! mouseleave event didn't work correctly on user menus with the 'right-side' class applied to them. (topic.js) * Even more hacking to prevent right-aligned user menus from animating the links inside them. Using float:right instead of text-align:right does the trick, although it also forces us to use the overflow:hidden clearfix, as well as some careful reordering. Gotta love CSS in those moments... (sections.css)

--- a/Themes/default/skins/sections.css
+++ b/Themes/default/skins/sections.css
@@ -475,17 +475,19 @@ ul.quickbuttons extends ul.reset
 
 ul.usermenuitem, ul.acmenuitem
 	padding: 2px
+	text-align: left
 	li
 		display: block
-		text-align: left
 		a
 			padding-right: 4px
 
-ul.usermenuitem li
-	.right-side &
-		text-align: right
-	a
-		padding-left: 4px
+ul.usermenuitem
+	li
+		overflow: hidden
+		a
+			padding-left: 4px
+	.right-side & li a
+		float: right
 
 .inner
 	padding: 1em .7em 0 .7em
